--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -9,6 +9,6 @@ body {
   line-height: 1.5;
   color: #dcd1d5;
   text-align: left;
-  background-color: #696969;
+  background-color: #2f2f2f;
 }
 
